--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@react-navigation/material-top-tabs": "^7.1.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "~52.0.47",
-    "expo-navigation-bar": "~4.0.9",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-pager-view": "6.5.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "expo": "^53.0.22",
+    "expo-navigation-bar": "~4.2.8",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-pager-view": "6.7.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.5"
   },
   "devDependencies": {
