--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "2.0",
     "orientation": "portrait",
     "icon": "./assets/bible-icon.png",
-    "userInterfaceStyle": "dark",
+    "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/bible-splash.png",
