--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@react-navigation/material-top-tabs": "^7.1.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "^53.0.22",
-    "expo-navigation-bar": "~4.2.8",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-pager-view": "6.7.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "babel-preset-expo": "~54.0.9",
+    "expo": "^54.0.30",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-pager-view": "6.9.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-tab-view": "^4.0.5"
   },
   "devDependencies": {
